# HaskellKata

./: .gitignore  README.md  kata.cabal
kata02_karate_chop/: chop1.hs  chop2.hs  chop3.hs  chop4.hs
src/Kata02/: Chop1.hs  Chop2.hs  Chop3.hs  Utils.hs  chop4.hs
src/Kata04/: WeatherMunger.hs
src/kata02-karate-chop/: Utils.hs  chop4.hs
src/kata04-data-munging/: WeatherMunger.hs
test/: WeatherMungerSpec.hs
test/Kata02/: Chop1Spec.hs  Chop2Spec.hs  Chop3Spec.hs  Chop4Spec.hs
test/Kata04/: WeatherMungerSpec.hs
