name:                kata
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Safwan Kamarrudin
maintainer:          shaihulud@alumni.cmu.edu
build-type:          Simple
cabal-version:       >=1.10

library
  default-language: Haskell2010
  exposed-modules:  WeatherMunger
  build-depends:    base >=4.8 && <4.9,
                    bytestring == 0.10.6.*,
                    vector == 0.10.12.*,
                    cassava == 0.4.2.*,
                    QuickCheck == 2.8.*
  hs-source-dirs:   src, src/kata04-data-munging/

test-suite hspec
  default-language: Haskell2010
  build-depends:    base >=4.8 && <4.9,
                    kata,
                    hspec == 2.1.*,
                    test-framework == 0.8.1.*,
                    test-framework-quickcheck2 == 0.3.0.*,
                    hspec-test-framework == 0.1.*
  hs-source-dirs:   test
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0